Navbar+all hero_bg/hero_content scale fixed

--- a/Projects.html
+++ b/Projects.html
@@ -87,19 +87,32 @@
     <!---------- Start of pageTwo ---------->
     <div class="pageTwo slide-down">
       <!----------- Start of pageTwo__cards ----------->
+
       <div class="pageTwo__cardsContainer">
         <a
-          href="https://github.com/AbedalrahmanAkel/Membership-webpage"
+        class="pageTwo__cards"
+        href="https://abedalrahmanakel.github.io/Restaurant-s-Menu"
+        target="_blank"
+      >
+        <h3 class="cards__heading">Restaurant's Menu</h3>
+        <p class="cards__des">
+          Menu that displays the available cocktail and juice at the Restaurant (Automated with a Database).
+        </p>
+        <p class="cards__date">Created on 2023</p>
+      </a>
+    <!----------- Start of Project 2 ----------->
+        <a
+          href="https://abedalrahmanakel.github.io/Membership-webpage/"
           target="_blank"
           class="pageTwo__cards"
         >
           <h3 class="cards__heading">Membership webpage</h3>
           <p class="cards__des">
-            A webpage that offers 3 subscriptions for an X company/brand.
+            A mini-page that offers 3 subscriptions for an X company/brand.
           </p>
           <p class="cards__date">Created on 2023</p>
         </a>
-        <!---------Start Project 2--------->
+        <!---------Start Project 3--------->
         <a
           class="pageTwo__cards"
           href="https://github.com/AbedalrahmanAkel/CODSOFT/tree/Landing-Page"
@@ -111,7 +124,7 @@
           </p>
           <p class="cards__date">Created on 2023</p>
         </a>
-        <!---------Start Project 3--------->
+        <!---------Start Project 4--------->
         <a
           href="https://github.com/AbedalrahmanAkel/CODSOFT/tree/Calculator"
           class="pageTwo__cards"
@@ -123,16 +136,6 @@
             and division operators.
           </p>
           <p class="cards__date">Created on 2023</p>
-        </a>
-        <!---------Start Project 4--------->
-        <a
-          href=""
-          class="pageTwo__cards"
-          target="_blank"
-        >
-          <h3 class="cards__heading">Future Projects</h3>
-          <p class="cards__des">coming soon..</p>
-          <p class="cards__date">Created on..</p>
         </a>
         <!---------Start Project 5--------->
         <a
@@ -154,10 +157,9 @@
           <p class="cards__des">coming soon..</p>
           <p class="cards__date">Created on..</p>
         </a>
+        <!-- End of pageTwo__cards -->
       </div>
-
       <!-- End of pageTwo__cardsContainer -->
-      <!-- End of pageTwo__cards -->
     </div>
     <!-- End of pageTwo -->
   </body>
