navbar is now 3d !!

--- a/Contact.html
+++ b/Contact.html
@@ -15,6 +15,10 @@
       rel="stylesheet"
       href="./Animation.css"
     />
+    <link
+    rel="stylesheet"
+    href="./navbar.css"
+  />
   </head>
   <body>
     <header>
@@ -155,11 +159,12 @@
             ></a>
           </div>
           <!-- End of hero__iconsContainer -->
-          <a
+          <div class="hero__ctaContainer"><a
             class="hero__cta" target="_blank"
             href="./Abed Al Rahman Akel Resume.pdf"
             >See my resume</a
-          >
+          ></div>
+          
         </div>
       </div>
     </header>
