--- a/Home.html
+++ b/Home.html
@@ -15,6 +15,10 @@
       rel="stylesheet"
       href="./Animation.css"
     />
+    <link
+      rel="stylesheet"
+      href="./navbar.css"
+    />
   </head>
   <body>
     <header>
