--- a/Skills.html
+++ b/Skills.html
@@ -10,11 +10,16 @@
     <link
       rel="stylesheet"
       href="./Skills.css"
+      class="navbar__links--active"
     />
     <link
       rel="stylesheet"
       href="./Animation.css"
     />
+    <link
+    rel="stylesheet"
+    href="./navbar.css"
+  />
   </head>
   <body>
     <header>
