Hammenu done - Hero done for mobile - needs rest of pages responsive

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -29,54 +29,61 @@
           <p class="navbar__signiture">Abed Al Rahman Akel</p>
           <p class="navbar__signiture">/></p>
         </div>
-        <ul class="navbar__linksContainer">
-          <li>
-            <a
-              href="../HTML/Home.html"
+        <div class="navbar__hamMenu" onclick="navbarMobileView()">
+          <span class="navbar__hamMenu__span"></span>
+          <span class="navbar__hamMenu__span"></span>
+          <span class="navbar__hamMenu__span"></span>
+        </div>
+        <div class="navbar__linksContainer">
+          <div class="navbar__xSign" onclick="navbarMobileView()">
+            <div class="navbar__xSign__spanContainer">
+              <span class="navbar__xSign__span"></span>
+              <span class="navbar__xSign__span"></span>
+            </div>
+          </div>
+          <a href="../HTML/Home.html">
+            <p
               class="navbar__links navbar__links--active"
               >Home
-            </a>
-          </li>
-          <li>
-            <a
-              href="../HTML/Skills.html"
+            </p>
+          </a>
+          <a href="../HTML/Skills.html">
+            <p
               class="navbar__links"
               >Skills
-            </a>
-          </li>
-          <li>
-            <a
-              href="../HTML/Education.html"
+            </p>
+          </a>
+          <a href="../HTML/Education.html"
+          >
+            <p
               class="navbar__links"
-              >Education</a
+              >Education</p
             >
-          </li>
-          <li>
-            <a
-              href="../HTML/Projects.html"
+          </a>
+          <a href="../HTML/Projects.html">
+            <p              
               class="navbar__links"
-              >Projects</a
+              >Projects</p
             >
-          </li>
-          <li>
-            <a
-              href="../HTML/Contact.html"
+          </a>
+          <a href="../HTML/Contact.html">
+            <p
               class="navbar__links"
-              >Contact Me</a
+              >Contact Me</p
             >
-          </li>
-        </ul>
+          </a>
+        </div>
       </div>
       <!-- End of navbar -->
       <!-- Start of Page 1 -->
       <div class="hero slide-up">
         <div class="hero__content">
           <h1 class="hero__heading">
-            Hello everyone !<br />
-            I'm Abed 👋
+            Hello !<br />
+            I'm Abed Al Rahman👋
           </h1>
           <p class="hero__paragraph">
-            An avid programmer with a flair for developing innovative<br />solutions,bringing
+            An avid programmer with a flair for developing innovative solutions, bringing
             ideas to life through programming expertise and a passion for
             problem-solving.
           </p>
@@ -194,7 +201,7 @@
           </h2>
           <ul>
             <li class="pageTwo__li--icons">
-              <svg
+              <svg class="pageTwo__icons"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
                 aria-hidden="true"
